# lincot

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  example-config.ini  mkdocs.yml  requirements_test.txt  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: debian.yml  python-publish_to_pypi.yml  python-test_and_lint.yml
cockpit-lincot/: .gitignore  Makefile  README.md  build.js  cockpit-adsbcot.spec  org.cockpit_project.adsbcot.metainfo.xml  org.cockpit_project.lincot.metainfo.xml  package-lock.json  package.json  packit.yaml
cockpit-lincot/.github/workflows/: ci.yml  release.yml
cockpit-lincot/packaging/: 49-cockpit-adsbcot.rules  49-cockpit-lincot.rules  cockpit-adsbcot.control  cockpit-adsbcot.spec.in  cockpit-lincot.control  install_pkg_build_deps.sh
cockpit-lincot/src/: app.scss  app.tsx  conf.tsx  envDefaultFile.test.ts  envDefaultFile.ts  index.css  index.tsx  manifest.json  patternfly-cockpit.scss  serviceCard.tsx  tlsCard.tsx  types.tsx
debian/: lincot.conf  lincot.postinst  lincot.service
docs/: configuration.md  installation.md  license.md  quickstart.md  requirements.txt  troubleshooting.md
lincot/: __init__.py  classes.py  commands.py  constants.py  functions.py
src/lincot/: __init__.py  classes.py  commands.py  constants.py  functions.py  identity.py  network.py  position.py  remarks.py
tests/: test_functions.py  test_gpspipe  test_network.py
